--- a/class-sourc/class-05/template.css
+++ b/class-sourc/class-05/template.css
@@ -14,7 +14,7 @@ body{
 
 #wrapper{
     width: 100%;
-    height: 1300px;
+    height: 1450px;
     background-color: #666666;
 }
 
@@ -43,10 +43,44 @@ body{
 #menu{
     float: left;
     width: 100%;
-    height: 50px;
+    height: 200px;
     background-color: #999999;
     margin-top: 5px;
 } 
+ 
+#menu ul{
+    margin: 0px;
+    padding: 0px;
+}
+
+#menu ul li{
+    float: left;
+    width: 200px;
+    /* background-color: #000000; */
+    background: linear-gradient(to top,olive,orange,red);
+    color: #ffffff;
+    list-style-type:none;
+    margin-left: 5px;
+    text-align: center;
+    padding: 91px 0px;
+    cursor: pointer;
+    font-weight:bold;       /*kaj korenai*/  
+    /* border-radius: 25px 0px;            Pblm= radius kaj korenai buje nai/2: redius 1-3ki vabay palo? */
+    border-radius: 200px;
+    transition: all 2s;
+    -moz-transition: all 2s;
+    -webkit-transition: all 2s;
+    -o-transition: all 2s;
+    -ms-transition: all 2s;
+
+}
+
+#manu ul li:hover{
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 0px 25px;    /*kaj korenai*/
+
+}
 
 #content-wrapper{
     float: left;
@@ -70,6 +104,17 @@ body{
     height: 800px;
     background-color: #999999;
     margin-right: .3%;
+}
+
+#content-wrapper #content .box{
+    float: left;
+    width: 300px;
+    height: 200px;
+    background-color: #ff0000 ;
+    margin: 50px;
+    /* box-shadow: 5px 5px 5px #000000; */
+    /* box-shadow: 0px 0px 5px 5px #000000; */
+    box-shadow: 0px 0px 50px 15px #000000 inset;
 }
 
 #content-wrapper #right{
