--- a/css-practice/nav-menu-2/style.css
+++ b/css-practice/nav-menu-2/style.css
@@ -1,33 +1,97 @@
-.nave-manu{
+.nav-manu{
     background-color: #dbc424;
     width: 100%;
     height: 300px;
 }
 
-.nave-manu ul{
+.nav-manu ul{
     margin: 0px;
     padding: 0px;
 }
 
-.nave-manu ul li{
+.nav-manu ul li{
     float: left;
     width: 20%;
     background-color: #0dd4d4;
     color: #ffffff;
     list-style-type: none;
-    margin-left: 5px;
+    margin-left: 45px;
     text-align: center;
     padding: 50px 0px;
     cursor: pointer;
     font-weight: bold;
-    border-radius: 100px 0px 100px 0px;
+    border-radius: 10px;
     transition: all 2s;
     height: 200px;
     background: linear-gradient(to right,olive,orange,red);
 }
 
-.nave-manu ul li:hover{
+.nav-manu ul li:hover{
     background-color: #ffffff;
     color: #000000;
     border-radius: 0px 100px 0px 100px;
+    transform: rotate(360deg);
+}
+
+.nav-manu-to{                                      /*2nd part*/
+    background-color: #812581;
+    width: 100%;
+    height: 400px;
+}
+
+.nav-manu-to ul{
+    margin: 0px;
+    padding: 0px;
+}
+
+.nav-manu-to ul li{
+    float: left;
+    width: 20%;
+    height: 30px;
+    background-color: #dd2bf5;
+    color: #ffffff;
+    list-style-type: none;
+    text-align: center;
+    margin: 26px;
+    padding: 50px 0px;
+    font-weight: bold;
+    border-radius:10px;
+    cursor: pointer;
+    transition: all 2s;
+}
+
+.nav-manu-to ul li:hover{
+    background-color: #dbc424;    
+    transform: rotate(1080deg);
+    color: #000000;
+    border-radius: 50px 0px 50px 0px;
+}
+
+.nav-manu-bar{
+    background-color: limegreen;
+    width: 100%;
+    height: 200px;
+}
+
+.nav-manu-bar ul{
+    margin: 0px;
+    padding: 0px;
+}
+
+.nav-manu-bar ul li{
+    display: inline-block;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 20px 35px;
+    border-right: 2px solid #0c8080;
+    transition: all 2s;
+
+}
+
+.nav-manu-bar ul li:hover{
+    background-color: yellow;
+    color: rgb(255, 132, 255);
+    transform: rotate(360deg);
+    border-radius: 50px;
+
 }
