--- a/css-practice/nav-menu/style.css
+++ b/css-practice/nav-menu/style.css
@@ -7,13 +7,17 @@
 .nevbar ul li{
     display: inline-block;  /*list ar itam gula akoi line a nay*/
     padding: 20px;
-    font-size: 20px;
+    /* font-size: 20px; */
+    background-color: #1c961c;
     color: #ffffff;
+    /* transition: all 2s; */
+    /* margin: 20px; */
 }
 
 .nevbar ul li:hover{             /*cursor uporay nelay chang hoi/vover manay uporay neow*/
-    background-color: #b3e287;   
+    background-color: #3dff16;   
     color: #000000;
     border-radius: 20px 0px;
     cursor: pointer;
+    transform: rotate(360deg);
 }
